fix regression of align bullets text and regular text

--- a/td-documentation-reactjs/src/doc-elements/bullets/BulletList.css
+++ b/td-documentation-reactjs/src/doc-elements/bullets/BulletList.css
@@ -4,6 +4,9 @@ ul.icon-based {
 
 ul.content-block {
     margin-bottom: 15px;
+}
+
+li {
     width: auto;
 }
 
